[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/screens_menus/bgscroll.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/characters.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/CharacterStats.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/screens_menus/CharacterSelect.gd" type="Script" id=4]
[ext_resource path="res://assets/screens_menus/CharacterSelectButton.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Gameplay.ttf"

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
font_data = SubResource( 1 )

[node name="CharacterSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 112.0, 56.0, 8.0, 216.0, 168.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 128.0, 8.0, 248.0, 64.0, 192.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.596078, 0.980392, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgscroll" parent="." instance=ExtResource( 1 )]

[node name="CharacterSelectTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.5
margin_top = 8.0
margin_right = 92.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Character Select"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelectBox" type="ColorRect" parent="."]
margin_left = 88.0
margin_top = 30.0
margin_right = 168.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="."]
margin_left = 47.0
margin_top = 113.0
margin_right = 263.0
margin_bottom = 132.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "SEAN O' CONNOR"
align = 1
valign = 1

[node name="Stats" type="Control" parent="."]
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeStat" type="Label" parent="Stats"]
margin_left = 11.0
margin_top = 157.0
margin_right = 152.0
margin_bottom = 176.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "Life"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeStatNumber" type="Label" parent="Stats"]
margin_left = 91.0
margin_top = 157.0
margin_right = 232.0
margin_bottom = 176.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.752941, 0.188235, 1 )
text = "| |"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedStat" type="Label" parent="Stats"]
margin_left = 11.0
margin_top = 173.0
margin_right = 152.0
margin_bottom = 192.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "Speed"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedStatNumber" type="Label" parent="Stats"]
margin_left = 91.0
margin_top = 173.0
margin_right = 232.0
margin_bottom = 192.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.752941, 0.188235, 1 )
text = "| | |"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrecisionStat" type="Label" parent="Stats"]
margin_left = 11.0
margin_top = 189.0
margin_right = 152.0
margin_bottom = 208.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "Precision"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrecisionStatNumber" type="Label" parent="Stats"]
margin_left = 91.0
margin_top = 189.0
margin_right = 232.0
margin_bottom = 208.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.752941, 0.188235, 1 )
text = "| | | |"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeStat" type="Label" parent="Stats"]
margin_left = 11.0
margin_top = 205.0
margin_right = 152.0
margin_bottom = 224.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "Range"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeStatNumber3" type="Label" parent="Stats"]
margin_left = 91.0
margin_top = 205.0
margin_right = 232.0
margin_bottom = 224.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.752941, 0.188235, 1 )
text = "| | |"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RofStat" type="Label" parent="Stats"]
margin_left = 11.0
margin_top = 221.0
margin_right = 152.0
margin_bottom = 240.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "RoF"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RofStatNumber" type="Label" parent="Stats"]
margin_left = 91.0
margin_top = 221.0
margin_right = 232.0
margin_bottom = 240.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.752941, 0.188235, 1 )
text = "| | |"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityTitle" type="Label" parent="Ability"]
margin_left = 128.0
margin_top = 137.0
margin_right = 288.0
margin_bottom = 156.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "Ability"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityName" type="Label" parent="Ability"]
margin_left = 128.0
margin_top = 161.0
margin_right = 288.0
margin_bottom = 180.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 3 )
text = "Crazy Hamburger"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterImage" type="Sprite" parent="."]
position = Vector2( 127, 72 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 288, 0, 96, 96 )

[node name="ArrowLeft" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ArrowRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 184, 73 )
key_pressed = "ui_right"
